<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.potato.couchpotatoes.SignUpActivity">

    <!-- Email Field -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_email_string" />

    <!-- Prevent keyboard from showing on startup -->
    <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <EditText
                android:id="@+id/fragment_sign_up_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_prompt_email"
                android:imeActionId="6"
                android:imeActionLabel="@string/sign_up_prompt_email"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>


    <!-- Password Field -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_password_string" />


        <EditText
                android:id="@+id/fragment_sign_up_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/sign_up_prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_password_string_confirm"/>


        <EditText
                android:id="@+id/fragment_sign_up_password_confirm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_prompt_password_confirm"
                android:imeActionId="6"
                android:imeActionLabel="@string/sign_up_prompt_password_confirm"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>

    <Button
            android:id="@+id/fragment_sign_up_email_password_next_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Next"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="right"/>

</LinearLayout>
