<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.potato.couchpotatoes.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Prevent keyboard from showing on startup -->
            <!--TODO is there a better way than this hack?-->
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <!-- First Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_sign_up_info_form_first_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_first_name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/sign_up_first_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Middle Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_sign_up_info_form_middle_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_middle_name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/sign_up_middle_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Last Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_sign_up_info_form_last_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_last_name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/sign_up_last_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Date of Birth -->
            <TextView
                android:id="@+id/fragment_sign_up_info_form_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_dob_prompt"
                android:textSize="16dp"
                android:layout_marginTop="16dp" />

            <!--TODO change this to select date, then have a text view that will display the date chosen-->
            <!--TODO may have to nest this next part in another horizontal linear layout to display the date next to the button-->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                <TextView
                        android:id="@+id/fragment_sign_up_dob_display"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="start"
                        android:gravity="center_vertical|start"
                        android:layout_alignParentStart="true"
                        android:textSize="18sp"
                        android:textColor="@color/primaryTextColor"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/sign_up_dob_display_default"/>
                <Button
                        android:id="@+id/fragment_sign_up_info_form_date_picker_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_gravity="end"
                        android:gravity="center_vertical|end"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:text="@string/sign_up_dob_btn_label"
                        android:textStyle="bold" />
                <!--android:text="@string/sign_up_dob"-->

            </RelativeLayout>

            <!-- Gender -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_gender_prompt"
                android:textSize="16dp"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/fragment_sign_up_info_form_gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:prompt="@string/sign_up_gender_prompt"
                android:paddingTop="8dp"
                />

            <!-- Gender Preferences -->
            <TextView
                android:id="@+id/fragment_sign_up_info_form_gender_preference_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_gender_preference_prompt"
                android:textSize="16dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                android:id="@+id/fragment_sign_up_info_form_gender_preference_male_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_male" />
                <CheckBox
                    android:id="@+id/fragment_sign_up_info_form_gender_preference_female_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_female" />
                <CheckBox
                    android:id="@+id/fragment_sign_up_info_form_gender_preference_nonbinary_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_nonbinary" />
                <CheckBox
                    android:id="@+id/fragment_sign_up_info_form_gender_preference_other_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_other" />
            </LinearLayout>

            <!-- Location -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_location"
                android:textSize="16dp"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/fragment_sign_up_info_form_location_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/location_array"
                android:prompt="@string/sign_up_location"
                android:paddingTop="8dp"
                />

            <!-- Next -->
            <Button
                android:id="@+id/fragment_sign_up_info_form_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="Sign Up"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
