<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:padding="10dp"
                                                 android:background="@color/white"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.example.potato.couchpotatoes.LoginActivity">

    <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin">

        <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_shape_btn"
                android:src="@drawable/couch_potatoes_logo" />

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/colorPrimaryLight"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/btn_login"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:textSize="14sp"
                android:elevation="2dp"/>


        <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:minHeight="0dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif"/>


        <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:fontFamily="sans-serif"/>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
