<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:background="@color/white"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.example.potato.couchpotatoes.ResetPasswordActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/title_reset_password">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ProgressBar
                android:id="@+id/reset_progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        <LinearLayout
                android:id="@+id/reset_password_form"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">


            <!--<ImageView-->
            <!--android:layout_width="@dimen/logo_w_h"-->
            <!--android:layout_height="@dimen/logo_w_h"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:src="@mipmap/ic_launcher" />-->

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/lbl_forgot_password"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_password_msg"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/reset_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/primaryTextColor"
                        android:textColorHint="@color/hint"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/btn_reset_password"
                    android:background="@color/colorPrimary"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>